# PageFerry

./: .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
backend/: .env.example  README.md  main.py  pageferry-backend.spec  pyproject.toml  sidecar.py
backend/api/: __init__.py  registry.py  security.py
backend/api/v1/: __init__.py  jobs.py  model_catalog.py  pdf_resources.py  providers.py  system.py
backend/core/: __init__.py  paths.py  settings.py  version.py
backend/db/: __init__.py  jobs.py  migrations.py  sqlite.py
backend/db/migrations/: 0001_initial.sql  0002_expand_document_types.sql  0003_provider_configs.sql  0004_job_results.sql  0005_provider_probe_latency.sql  0006_job_languages.sql  0007_sanitize_job_source_names.sql  0008_job_options.sql  0009_provider_model_inventory.sql  0010_rename_discovered_model_source.sql  0011_custom_openai_providers.sql  0012_unique_provider_configs.sql  0013_provider_secret_reconciliation.sql  0014_provider_base_url_overrides.sql  0015_job_stage_progress.sql  0016_rename_job_progress_stages.sql  0017_provider_model_runtime_settings.sql  0018_manual_provider_models.sql  0019_provider_active_state.sql  0020_job_artifacts_and_xlsx.sql
backend/modules/: __init__.py
backend/modules/document_translation/: __init__.py  contracts.py
backend/modules/docx/: __init__.py  bilingual_formatter.py  entities.py  extractor.py  formatter.py  markup.py  pipeline.py  table_extractor.py  table_formatter.py  token_counter.py  xml_helpers.py
backend/modules/model_catalog/: __init__.py  catalog.py  provider_config.py  provider_repository.py
backend/modules/pdf/: README.md  __init__.py  assets.py  constants.py  entities.py  errors.py  extractor.py  font_manager.py  formatter.py  layout.py  layout_tools.py  lazy_layout.py  pipeline.py  rasterizer.py  renderer.py  resource_installer.py  side_by_side_composer.py  span_line_utils.py  table_renderer.py  token_counter.py  translator.py
backend/modules/plain_text/: __init__.py  markdown.py  markdown_table.py  models.py  pipeline.py  reader.py  segmenter.py
backend/modules/pptx/: __init__.py  entities.py  extractor.py  formatter.py  markup.py  pipeline.py  run_normalizer.py  table_extractor.py  table_formatter.py
backend/modules/translation/: __init__.py  batch_fanout.py  contracts.py  jobs.py  model_runtime.py  office_fonts.py  prompt.py  quality.py  stub_translator.py  token_groups.py
backend/modules/xlsx/: __init__.py  entities.py  extractor.py  formatter.py  pipeline.py
backend/resources/: __init__.py
backend/resources/model_catalog/: catalog.json
backend/resources/pdf_assets/: README.md  manifest.json
backend/tests/: test_app.py  test_batch_fanout.py  test_deepseek_provider.py  test_docstrings.py  test_docx_pipeline.py  test_docx_structures.py  test_docx_token_counter.py  test_jobs_api.py  test_jobs_repository.py  test_lazy_layout.py  test_migrations.py  test_model_catalog.py  test_model_runtime.py  test_office_fonts.py  test_office_run_boundaries.py  test_pdf_assets.py  test_pdf_pipeline.py  test_pdf_resource_installer.py  test_pdf_resources_api.py  test_plain_text_pipeline.py  test_pptx_pipeline.py  test_prompt_contract.py  test_providers_api.py  test_publish_pdf_assets_github_script.py  test_publish_pdf_assets_r2_script.py  test_secrets.py  test_sidecar.py  test_sync_layout_model_script.py  test_sync_pdf_assets_script.py  test_translation_jobs.py  test_translation_quality.py  test_xlsx_pipeline.py
backend/tests/pdf_translation/: test_block_classifier.py  test_bold_style_detection.py  test_cid_text_recovery.py  test_extractor_all_texts.py  test_font_manager_symbol_routing.py  test_formatter_block_plain_text.py  test_renderer_block_mode.py  test_renderer_ctm_normalization.py  test_renderer_scaling_guard.py  test_text_wrap.py  (+3 more)
tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos-smoke.conf.json  tauri.release.conf.json  tauri.windows.conf.json
tauri/capabilities/: default.json  windows-window-controls.json
tauri/icons/: icon.icns
tauri/src/: main.rs  output.rs  sidecar.rs
(+70 files in other folders)
