[project]
name = "pageferry-backend"
version = "0.1.0"
description = "Local document translation service for PageFerry"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "httpx2>=2,<3",
  "keyring>=25.6,<26",
  "mistune>=3.2,<4",
  "platformdirs>=4.3,<5",
  "pydantic-settings>=2.10,<3",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "python-pptx>=1.0,<2",
  "tiktoken>=0.11,<1",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
