[package]
name = "pageferry"
version = "0.1.0"
description = "Local-first document translation desktop client"
authors = ["PageFerry contributors"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
